blockml/test/errors/03_view/e284/e284_two.view
view: e284_two
derived_table: |
  SELECT *
  FROM abc
  WHERE {% apply_filter f5 %} target5 {% end_apply_filter %}
fields:
- dimension: dim1
  sql: 111

- filter: f5
  result: from_field
  from_field: dim1
  default:
  - '-abc-'



